# ExceltoPDF

./: EXEMPLO_USO.md  README.md  README_EN.md  README_PT.md  TESTE_AJUSTE.md  pyproject.toml  requirements.txt  run_exceltoPDF_cli.bat  run_exceltoPDF_gui.bat  teste_simples.xlsx
.github/workflows/: ci.yml
src/exceltopdf/: __init__.py  cli.py  gui.py
tests/: __init__.py  test_basic.py
